force-app/main/default/objects/Reservation__c/fields/Days_Of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Days_Of_Booking__c</fullName>
    <formula>(Check_Out_Date__c - Check_In_Date__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Of Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>