force-app/main/default/objects/Reservation__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Type_Of_Room__c</field>
            <operation>equals</operation>
            <valueField>Rooms__c.Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Price_Per_Day__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>Rooms__c.Price_Per_Day__c</valueField>
        </filterItems>
        <filterItems>
            <field>Rooms__c.Available_For_Booking__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rooms__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>