force-app/main/default/objects/Reservation__c/validationRules/CheckInOutDateShouldbeInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInOutDateShouldbeInFuture</fullName>
    <active>true</active>
    <errorConditionFormula>( Check_In_Date__c &lt; Today() &amp;&amp; Check_Out_Date__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>Check In Date Must Be In future</errorMessage>
</ValidationRule>